kubernetes/ingress-nest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: allio.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
